changed to air pollution analysis, updated source.ipynb and added data sets

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,10 @@ pillow = "*"
 pandas = "*"
 matplotlib = "*"
 numpy = "*"
+google-cloud-bigquery = "*"
+requests = "*"
+bs4 = "*"
+lxml = "*"
 
 [dev-packages]
 
